# ImageFeaturesDetectorExtractor

./: CMakeLists.txt  README.md  main.cpp  version.hpp.in
include/: test.hpp  version.hpp
src/: CMakeLists.txt  test.cpp
