GET_FILENAME_COMPONENT( DIR_NAME ${CMAKE_CURRENT_SOURCE_DIR} NAME )

STRING( COMPARE EQUAL "${DIR_NAME}" "src" CMP )

IF( CMP )
	SET( SUBPROJECT_NAME ${PROJECT_NAME}Core )
ELSE( CMP )
	STRING( FIND "${CMAKE_CURRENT_SOURCE_DIR}" "${NAMA_DIR_PROJEK}" MATCHRES )
	STRING( SUBSTRING "${CMAKE_CURRENT_SOURCE_DIR}" ${MATCHRES} -1 SUBPROJECT_NAME )
ENDIF( CMP )

STRING( REPLACE " " "" SUBPROJECT_NAME ${SUBPROJECT_NAME} )
STRING( REPLACE "-" "" SUBPROJECT_NAME ${SUBPROJECT_NAME} )
STRING( REPLACE "/" "" SUBPROJECT_NAME ${SUBPROJECT_NAME} )

MESSAGE( STATUS "SUBPROJECT_NAME: ${SUBPROJECT_NAME}" )

SET(
	SRC_FILES
	test.cpp
)

SET(
	INCLUDE_DIRS
	${CMAKE_CURRENT_SOURCE_DIR}/
	${CMAKE_CURRENT_SOURCE_DIR}/../include/
)

SET(
	LIBRARIES
)

LINK_DIRECTORIES( ${LIBRARIES} )
INCLUDE_DIRECTORIES( ${INCLUDE_DIRS} )

ADD_LIBRARY( ${SUBPROJECT_NAME} ${SRC_FILES} )

INSTALL(
	TARGETS ${SUBPROJECT_NAME}
	RUNTIME DESTINATION "${INSTALL_BIN_DIR}" COMPONENT runtime
	LIBRARY DESTINATION "${INSTALL_LIB_DIR}" COMPONENT devel
	ARCHIVE DESTINATION "${INSTALL_LIB_DIR}" COMPONENT devel
)
